# bufferevent

./: README.md
client/: build.sh  client  client.cpp  reactor_client_test.cc
server/: CMakeCache.txt  CMakeLists.txt  CmakeListback.txt  Makefile  README.md  build.sh  cmake_install.cmake  main.cpp  main.cpp.0  test.pb.cc  test.pb.h  test_server
server/DataServer/DBThread/: DBThread.cpp  DBThread.h  GlobalThread.cpp  GlobalThread.h
server/DataServer/include/: DBThreadManager.h  DataLoginNetServer.h  DataServerMgr.h
server/DataServer/src/: DBThreadManager.cpp  DataLoginNetServer.cpp  DataServerMgr.cpp  main.cpp
server/LogSrc/: LogServer.h
server/LogSrc/log4z/: CMakeCache.txt  Makefile  cmake_install.cmake
server/LogSrc/log4z/g++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
server/LogSrc/log4z/test/: Makefile  cmake_install.cmake
server/LoginServer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
server/LoginServer/include/: LoginNetServer.h  LoginServerMgr.h
server/LoginServer/src/: LoginNetServer.cpp  LoginServerMgr.cpp  main.cpp
server/config/: log4z.cfg  public_config.xml
server/doc/: 网络UML类图.docx
server/libutils/: LogServer.cpp  common.h  global.cpp  global.h  log4z.h  singleton.h
server/net/: .EventSocket.h.swp  CMakeCache.txt  CMakeLists.txt  EventMain.cpp  EventMain.h  EventNet.h  EventSocket.cpp  EventTcpLink.cpp  EventTcpServer.h  Makefile  cmake_install.cmake
server/net/include/: CS_NET_MSG_DEF.h  CS_NET_MSG_STRUCT.h  CommonThread.h  EventMain.h  EventNet.h  EventPacket.h  EventSocket.h  EventTcpLink.h  EventTcpServer.h  NET_MSG_DEF.h
server/net/src/: .EventPacket.cpp.swp  CommonThread.cpp  EventMain.cpp  EventPacket.cpp  EventSocket.cpp  EventTcpLink.cpp  EventTcpServer.cpp
server/otherlibs/libevent-2.0.21-stable/: libevent_core.lib  libevent_extras.lib
server/otherlibs/mysql/include/: my_config.h
server/projects/: NewGame.opensdf  NewGame.sln
server/projects/NewGame/: NewGame.vcxproj  NewGame.vcxproj.filters  ReadMe.txt
server/projects/comon/: ReadMe.txt  comon.vcxproj  comon.vcxproj.filters
server/projects/ipch/comon-5f87c85c/: comon-53f72908.ipch
server/projects/ipch/newgame-b5b871ac/: newgame-952167f0.ipch
server/protobuf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.proto
server/src/: LoginNetServer.cpp  LoginNetServer.h  LoginServerMgr.cpp  LoginServerMgr.h
